# arknights-rs

./: Cargo.toml  Readme.md
projects/arknights-data/: Cargo.toml  load.wl
projects/arknights-data/src/: lib.rs
projects/arknights-data/src/exp/: mod.rs
projects/arknights-database/: Cargo.toml  Readme.md  load.wl  package.json
projects/arknights-database/data/: gamedata_const.json
projects/arknights-database/src/: errors.rs  lib.rs
projects/arknights-database/src/cost/: mod.rs  stars.rs
projects/arknights-database/src/doctor/: levels.rs  mod.rs
projects/arknights-database/src/elite/: mod.rs
projects/arknights-database/tests/: main.rs
projects/arknights-database/tests/cost/: mod.rs
projects/arknights-id/: Cargo.toml  Readme.md  load.wl
projects/arknights-id/data/: item_index.json  story_review_table.json  story_table.json
projects/arknights-id/src/: lib.rs
projects/arknights-id/src/chapter_id/: data.json
projects/arknights-id/src/database/: mod.rs
projects/arknights-id/src/item_id/: mod.rs
projects/arknights-id/src/story_id/: data.json  data.rs  mod.rs  name.csv
